--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,10 @@ html {
   
 }
 
+input[type="number"]::-webkit-inner-spin-button, 
+  input[type="number"]::-webkit-inner-spin-button, 
+  input[type="number"]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+    appearance: none; /* Add this line */
+  }
