--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,33 @@ input[type="number"]::-webkit-inner-spin-button,
     margin: 0; 
     appearance: none; /* Add this line */
   }
+
+
+  h1 {
+    width: fit-content;
+    font-weight: 600;
+    color: #408FFF;
+    font-size: 25px;
+    border-bottom: #408FFF solid 2px; 
+  }
+
+  h2 {
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .code-block {
+    background-color: #f8f9fa; /* Light gray for code blocks */
+    border-left: 4px solid #007BFF; /* Blue left border for code blocks */
+    padding: 10px;
+    overflow-x: auto; /* Allow horizontal scrolling if needed */
+    border-radius: 5px; /* Rounded corners for code blocks */
+}
+
+/* Inline Code Styles */
+code {
+    background-color: #e9ecef; /* Light background for inline code */
+    padding: 2px 4px;
+    border-radius: 4px;
+}
